--- a/deadlabels.html
+++ b/deadlabels.html
@@ -63,19 +63,19 @@ body {
 <!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
-    <a href="/media/Ambivalence.mp3"><img src="/media/FrontA.jpg" style="width:100%"></a>
-    <a href="/media/Elf_Cut.mp3"><img src="/media/FrontE.jpg" style="width:100%"></a>
+    <a href="/media/Ambivalence.mp3"><img src="/media/front_squares/FrontA.jpg" style="width:75%"></a>
+    <a href="/media/Elf_Cut.mp3"><img src="/media/front_squares/FrontE.jpg" style="width:75%"></a>
   </div>
   <div class="column">
-    <a href="/media/Beau_Monde_b.mp3"><img src="/media/FrontB.jpg" style="width:100%"></a>
-    <a href="/media/Frogman.mp3"><img src="/media/FrontF.jpg" style="width:100%"></a>
+    <a href="/media/Beau_Monde_b.mp3"><img src="/media/front_squares/FrontB.jpg" style="width:75%"></a>
+    <a href="/media/Frogman.mp3"><img src="/media/front_squares/FrontF.jpg" style="width:75%"></a>
   </div>  
   <div class="column">
-    <a href="/media/Clear.mp3"><img src="/media/FrontC.jpg" style="width:100%"></a>
-    <a href="/media/GneissThings_norm.mp3"><img src="/media/FrontG.jpg" style="width:100%"></a>
+    <a href="/media/Clear.mp3"><img src="/media/front_squares/FrontC.jpg" style="width:75%"></a>
+    <a href="/media/GneissThings_norm.mp3"><img src="/media/front_squares/FrontG.jpg" style="width:75%"></a>
   </div>
   <div class="column">
-    <a href="/media/deFocus_MIX_2.mp3"><img src="/media/FrontD.png" style="width:100%"></a>
+    <a href="/media/deFocus_MIX_2.mp3"><img src="/media/front_squares/FrontD.jpg" style="width:75%"></a>
   </div>
 </div>
 
