--- a/deadlabels.html
+++ b/deadlabels.html
@@ -63,22 +63,21 @@ body {
 <!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
-    <a href="/media/Ambivalence.mp3"><img src="/media/front_squares/FrontA.jpg" style="width:75%"></a>
-    <a href="/media/Elf_Cut.mp3"><img src="/media/front_squares/FrontE.jpg" style="width:75%"></a>
+    <a href="/dl/media/Ambivalence.mp3"><img src="/dl/media/front_squares/FrontA.jpg" style="width:75%"></a>
+    <a href="/dl/media/Elf_Cut.mp3"><img src="/dl/media/front_squares/FrontE.jpg" style="width:75%"></a>
   </div>
   <div class="column">
-    <a href="/media/Beau_Monde_b.mp3"><img src="/media/front_squares/FrontB.jpg" style="width:75%"></a>
-    <a href="/media/Frogman.mp3"><img src="/media/front_squares/FrontF.jpg" style="width:75%"></a>
+    <a href="/dl/media/Beau_Monde_b.mp3"><img src="/dl/media/front_squares/FrontB.jpg" style="width:75%"></a>
+    <a href="/dl/frogman.html"><img src="/dl/media/front_squares/FrontF.jpg" style="width:75%"></a>
   </div>  
   <div class="column">
-    <a href="/media/Clear.mp3"><img src="/media/front_squares/FrontC.jpg" style="width:75%"></a>
-    <a href="/media/GneissThings_norm.mp3"><img src="/media/front_squares/FrontG.jpg" style="width:75%"></a>
+    <a href="/dl/media/Clear.mp3"><img src="/dl/media/front_squares/FrontC.jpg" style="width:75%"></a>
+    <a href="/dl/gneiss.html"><img src="dl/media/front_squares/FrontG.jpg" style="width:75%"></a>
   </div>
   <div class="column">
-    <a href="/media/deFocus_MIX_2.mp3"><img src="/media/front_squares/FrontD.jpg" style="width:75%"></a>
+    <a href="/dl/media/deFocus_MIX_2.mp3"><img src="/dl/media/front_squares/FrontD.jpg" style="width:75%"></a>
   </div>
 </div>
-
 </body>
 </html>
 
