--- a/deadlabels.html
+++ b/deadlabels.html
@@ -21,7 +21,7 @@ body {
   display: flex;
   -ms-flex-wrap: wrap; /* IE10 */
   flex-wrap: wrap;
-  padding: 0 4px;
+  padding: 4px 4px;
 }
 
 /* Create four equal columns that sits next to each other */
@@ -29,13 +29,14 @@ body {
   -ms-flex: 25%; /* IE10 */
   flex: 25%;
   max-width: 25%;
-  padding: 0 4px;
+  padding: 4px 4px;
 }
 
 .column img {
   margin-top: 8px;
   vertical-align: middle;
   width: 100%;
+  padding: 14px;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
@@ -63,19 +64,19 @@ body {
 <!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
-    <a href="/dl/media/Ambivalence.mp3"><img src="/dl/media/front_squares/FrontA.jpg" style="width:75%"></a>
-    <a href="/dl/media/Elf_Cut.mp3"><img src="/dl/media/front_squares/FrontE.jpg" style="width:75%"></a>
+    <a href="/dl/ambivalence.html"><img src="/dl/media/front_squares/FrontA.jpg" style="width:50%"></a>
+    <a href="/dl/elfcut.html"><img src="/dl/media/front_squares/FrontE.jpg" style="width:50%"></a>
   </div>
   <div class="column">
-    <a href="/dl/media/Beau_Monde_b.mp3"><img src="/dl/media/front_squares/FrontB.jpg" style="width:75%"></a>
-    <a href="/dl/frogman.html"><img src="/dl/media/front_squares/FrontF.jpg" style="width:75%"></a>
+    <a href="/dl/beaumonde.html"><img src="/dl/media/front_squares/FrontB.jpg" style="width:50%"></a>
+    <a href="/dl/frogman.html"><img src="/dl/media/front_squares/FrontF.jpg" style="width:50%"></a>
   </div>  
   <div class="column">
-    <a href="/dl/media/Clear.mp3"><img src="/dl/media/front_squares/FrontC.jpg" style="width:75%"></a>
-    <a href="/dl/gneiss.html"><img src="dl/media/front_squares/FrontG.jpg" style="width:75%"></a>
+    <a href="/dl/clear.html"><img src="/dl/media/front_squares/FrontC.jpg" style="width:50%"></a>
+    <a href="/dl/gneiss.html"><img src="dl/media/front_squares/FrontG.jpg" style="width:50%"></a>
   </div>
   <div class="column">
-    <a href="/dl/media/deFocus_MIX_2.mp3"><img src="/dl/media/front_squares/FrontD.jpg" style="width:75%"></a>
+    <a href="/dl/defocus.html"><img src="/dl/media/front_squares/FrontD.jpg" style="width:50%"></a>
   </div>
 </div>
 </body>
