--- a/dl/gneiss.html
+++ b/dl/gneiss.html
@@ -33,11 +33,11 @@ li {
 <div>
 	<video width="800" height="200" style="background-color: black;" controls>
         <source
-          src="/dl/media/GneissThings_norm.mp3"
+          src="/dl/media/Gneissthings.mp3"
           type="audio/mp3"
         />
         <track
-          src="/dl/media/GneissThings_playlist.vtt"
+          src="/dl/media/gneissthings_playlist.vtt"
           label="English subtitle"
           kind="subtitles"
           srclang="en-us"
