--- a/deadlabels/ambivalence.html
+++ b/deadlabels/ambivalence.html
@@ -65,7 +65,7 @@ li {
 <div>
 	<video width="800" height="200" style="background-color: black;" controls>
         <source
-          src="/deadlabels/media/Ambivalence.mp3"
+          src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/Ambivalence.mp3"
           type="audio/mp3"
         />
         <track
@@ -76,9 +76,6 @@ li {
           default
         />
     </video>
-</div>
-<div id="bottombar">
-	<a href="/deadlabels">home</span>
 </div>
 </body>
 </html>
