--- a/deadlabels/hefty.html
+++ b/deadlabels/hefty.html
@@ -47,7 +47,7 @@ li {
         <li><a href="https://www.discogs.com/master/182046-The-Aluminum-Group-Pelo">Aluminum Group - Pussy Reprise</a></li>
         <li><a href="https://www.discogs.com/release/889544-radicalfashion-Odori">Radicalfashion - Mask</a></li>
         <li><a href="https://www.discogs.com/release/1361914-Various-History-Is-Bunk-Part-1">Telefon Tel Aviv - Sound In A Dark Room (Ryuichi Sakamoto Remix)</a></li>
-        <li><a href="https://www.discogs.com/master/107485-SavathSavalas-Folk-Songs-For-Trains-Trees-And-Honey">Savath+Savals - Beginning</a></li>
+        <li><a href="https://www.discogs.com/master/107485-SavathSavalas-Folk-Songs-For-Trains-Trees-And-Honey">Savath+Savalas - Beginning</a></li>
 
 </ul>
 
