--- a/deadlabels.html
+++ b/deadlabels.html
@@ -80,6 +80,7 @@ body {
   <div class="column">
     <a href="/deadlabels/ambivalence.html"><img src="/deadlabels/media/front_squares/FrontA.jpg" style="width:50%"></a>
     <a href="/deadlabels/elfcut.html"><img src="/deadlabels/media/front_squares/FrontE.jpg" style="width:50%"></a>
+    <a href="/deadlabels/immune.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1678103529/gelman/deadlabels/d9kbvc3hwxtr7rxckzfl.png" style="width:50%"></a>
   </div>
   <div class="column">
     <a href="/deadlabels/beaumonde.html"><img src="/deadlabels/media/front_squares/FrontB.jpg" style="width:50%"></a>
