--- a/deadlabels/ambivalence.html
+++ b/deadlabels/ambivalence.html
@@ -69,7 +69,7 @@ li {
           type="audio/mp3"
         />
         <track
-          src="/deadlabels/media/ambivalence_playlist.vtt"
+          src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/ambivalence_playlist.vtt"
           label="English subtitle"
           kind="subtitles"
           srclang="en-us"
