--- a/deadlabels/gneiss.html
+++ b/deadlabels/gneiss.html
@@ -48,7 +48,7 @@ li {
 <div>
 	<video width="800" height="200" style="background-color: black;" controls>
         <source
-          src="/deadlabels/media/Gneissthings.mp3"
+          src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/GneissThings.mp3"
           type="audio/mp3"
         />
         <track
