--- a/deadlabels/hefty.html
+++ b/deadlabels/hefty.html
@@ -54,7 +54,7 @@ li {
 <div>
 	<video width="800" height="200" style="background-color: black;" controls>
         <source
-          src="/deadlabels/media/Hefty.mp3"
+          src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/Hefty.mp3"
           type="audio/mp3"
         />
         <track
