--- a/deadlabels.html
+++ b/deadlabels.html
@@ -78,21 +78,21 @@ body {
 <!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
-    <a href="/deadlabels/ambivalence.html"><img src="/deadlabels/media/front_squares/FrontA.jpg" style="width:50%"></a>
-    <a href="/deadlabels/elfcut.html"><img src="/deadlabels/media/front_squares/FrontE.jpg" style="width:50%"></a>
+    <a href="/deadlabels/ambivalence.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontA.jpg" style="width:50%"></a>
+    <a href="/deadlabels/elfcut.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontE.jpg" style="width:50%"></a>
     <a href="/deadlabels/immune.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1678103529/gelman/deadlabels/d9kbvc3hwxtr7rxckzfl.png" style="width:50%"></a>
   </div>
   <div class="column">
-    <a href="/deadlabels/beaumonde.html"><img src="/deadlabels/media/front_squares/FrontB.jpg" style="width:50%"></a>
-    <a href="/deadlabels/frogman.html"><img src="/deadlabels/media/front_squares/FrontF.jpg" style="width:50%"></a>
+    <a href="/deadlabels/beaumonde.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontB.jpg" style="width:50%"></a>
+    <a href="/deadlabels/frogman.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontF.jpg" style="width:50%"></a>
   </div>  
   <div class="column">
-    <a href="/deadlabels/clear.html"><img src="/deadlabels/media/front_squares/FrontC.jpg" style="width:50%"></a>
-    <a href="/deadlabels/gneiss.html"><img src="/deadlabels/media/front_squares/FrontG.jpg" style="width:50%"></a>
+    <a href="/deadlabels/clear.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontC.jpg" style="width:50%"></a>
+    <a href="/deadlabels/gneiss.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontG.jpg" style="width:50%"></a>
   </div>
   <div class="column">
-    <a href="/deadlabels/defocus.html"><img src="/deadlabels/media/front_squares/FrontD.jpg" style="width:50%"></a>
-    <a href="/deadlabels/hefty.html"><img src="/deadlabels/media/front_squares/FrontH.jpg" style="width:50%"></a>
+    <a href="/deadlabels/defocus.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontD.jpg" style="width:50%"></a>
+    <a href="/deadlabels/hefty.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontH.jpg" style="width:50%"></a>
   </div>
 </div>
 <div id="bottombar">
