--- a/deadlabels.html
+++ b/deadlabels.html
@@ -78,21 +78,21 @@ body {
 <!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
-    <a href="/deadlabels/ambivalence.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontA.jpg" style="width:50%"></a>
-    <a href="/deadlabels/elfcut.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontE.jpg" style="width:50%"></a>
-    <a href="/deadlabels/immune.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1678103529/gelman/deadlabels/d9kbvc3hwxtr7rxckzfl.png" style="width:50%"></a>
+    <a href="/deadlabels/ambivalence.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233509/gelman/deadlabels/FrontA.jpg" style="width:50%"></a>
+    <a href="/deadlabels/elfcut.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233508/gelman/deadlabels/FrontE.jpg" style="width:50%"></a>
+    <a href="/deadlabels/immune.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1678103529/gelman/deadlabels/FrontI.png" style="width:50%"></a>
   </div>
   <div class="column">
-    <a href="/deadlabels/beaumonde.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontB.jpg" style="width:50%"></a>
-    <a href="/deadlabels/frogman.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontF.jpg" style="width:50%"></a>
+    <a href="/deadlabels/beaumonde.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233504/gelman/deadlabels/FrontB.jpg" style="width:50%"></a>
+    <a href="/deadlabels/frogman.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233510/gelman/deadlabels/FrontF.jpg" style="width:50%"></a>
   </div>  
   <div class="column">
-    <a href="/deadlabels/clear.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontC.jpg" style="width:50%"></a>
-    <a href="/deadlabels/gneiss.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontG.jpg" style="width:50%"></a>
+    <a href="/deadlabels/clear.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233506/gelman/deadlabels/FrontC.jpg" style="width:50%"></a>
+    <a href="/deadlabels/gneiss.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233510/gelman/deadlabels/FrontG.jpg" style="width:50%"></a>
   </div>
   <div class="column">
-    <a href="/deadlabels/defocus.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontD.jpg" style="width:50%"></a>
-    <a href="/deadlabels/hefty.html"><img src="https://raw.githubusercontent.com/DonaldGelman/html/main/deadlabels/media/front_squares/FrontH.jpg" style="width:50%"></a>
+    <a href="/deadlabels/defocus.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233507/gelman/deadlabels/FrontD.jpg" style="width:50%"></a>
+    <a href="/deadlabels/hefty.html"><img src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/front_squares/FrontH.jpg" style="width:50%"></a>
   </div>
 </div>
 <div id="bottombar">
