--- a/deadlabels/clear.html
+++ b/deadlabels/clear.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
 <link rel="stylesheet" type="text/css" href="/css/dl.css">
+<meta charset="UTF-8">
+<meta name="description" content="All sounds taken from Clear Records, London, 1994-1998"/>
+<meta property="og:title" content="Dead Labels - Clear"/>
+<meta property="og:image" content="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/front_squares/FrontC.jpg"/>
+<meta property="og:image:type" content="image/jpeg"/>
 <style>
 body {
 	background-color: black;
@@ -28,9 +34,25 @@ li {
 	padding: 12px;
 }
 </style>
+</head>
 <body>
 <div class=header>
 	<a href="/deadlabels"><<</a>
+</div>
+<div>
+	<video width="800" height="200" style="background-color: black;" controls crossorigin="anonymous">
+        <source
+          src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/Clear.mp3"
+          type="audio/mp3"
+        />
+        <track
+	  src=https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/vtt/clear_playlist.vtt
+          label="English subtitle"
+          kind="subtitles"
+          srclang="en-us"
+          default
+        />
+    </video>
 </div>
 <ul>
 	<li><a href="https://www.discogs.com/master/155945-The-Lithium-Project-Lithium-Project">The Lithium Project - Passo Fundo</a></li>
@@ -47,20 +69,5 @@ li {
 	<li><a href="https://www.discogs.com/release/5325-Metamatics-A-Metamatics-Production">Metamatics - Swimmer</a></li>
 </ul>
 
-<div>
-	<video width="800" height="200" style="background-color: black;" controls>
-        <source
-          src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/Clear.mp3"
-          type="audio/mp3"
-        />
-        <track
-          src="/deadlabels/media/clear_playlist.vtt"
-          label="English subtitle"
-          kind="subtitles"
-          srclang="en-us"
-          default
-        />
-    </video>
-</div>
 </body>
 </html>
