--- a/deadlabels/elfcut.html
+++ b/deadlabels/elfcut.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
 <link rel="stylesheet" type="text/css" href="/css/dl.css">
+<meta charset="UTF-8">
+<meta name="description" content="All sounds taken from Elf Cut, Brussels, 1997-2000"/>
+<meta property="og:title" content="Dead Labels - Elf Cut"/>
+<meta property="og:image" content="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/front_squares/FrontE.jpg"/>
+<meta property="og:image:type" content="image/jpeg"/>
 <style>
 body {
 	background-color: black;
@@ -28,9 +34,25 @@ li {
 	padding: 12px;
 }
 </style>
+</head>
 <body>
 <div class=header>
 	<a href="/deadlabels"><<</a>
+</div>
+<div>
+	<video width="800" height="200" style="background-color: black;" controls crossorigin="anonymous">
+        <source
+          src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/Elfcut.mp3"
+          type="audio/mp3"
+        />
+        <track
+          src=https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/vtt/elfcut_playlist.vtt
+          label="English subtitle"
+          kind="subtitles"
+          srclang="en-us"
+          default
+        />
+    </video>
 </div>
 <ul>
 	<li><a href="https://www.discogs.com/master/140173-Rawakari-Ikebana">Rawakari - Wind City</a></l>
@@ -53,20 +75,5 @@ li {
 	<li><a href="https://www.discogs.com/master/140183-Fat-Masonics-Lodge">Fat Masonics - Dream Seams...</a></l>
 </ul>
 
-<div>
-	<video width="800" height="200" style="background-color: black;" controls>
-        <source
-          src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/Elfcut.mp3"
-          type="audio/mp3"
-        />
-        <track
-          src="/deadlabels/media/elfcut_playlist.vtt"
-          label="English subtitle"
-          kind="subtitles"
-          srclang="en-us"
-          default
-        />
-    </video>
-</div>
 </body>
 </html>
