--- a/deadlabels/defocus.html
+++ b/deadlabels/defocus.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta charset="UTF-8">
+<meta name="description" content="All sounds taken from deFocus, Guildford, 2000-2002"/>
+<meta property="og:title" content="Dead Labels - DeFocus"/>
+<meta property="og:image" content="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/front_squares/FrontD.jpg"/>
+<meta property="og:image:type" content="image/jpeg"/>
 <link rel="stylesheet" type="text/css" href="/css/dl.css">
 <style>
 body {
@@ -28,9 +34,25 @@ li {
 	padding: 12px;
 }
 </style>
+</head>
 <body>
 <div class=header>
 	<a href="/deadlabels"><<</a>
+</div>
+<div>
+	<video width="800" height="200" style="background-color: black;" controls crossorigin="anonymous">
+        <source
+          src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/Defocus.mp3"
+          type="audio/mp3"
+        />
+        <track
+          src=https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/vtt/defocus_playlist.vtt
+          label="English subtitle"
+          kind="subtitles"
+          srclang="en-us"
+          default
+        />
+    </video>
 </div>
 <ul>
 	<li><a href="https://www.discogs.com/release/2990-CiM-Reference">CiM - view</a></li>
@@ -50,20 +72,5 @@ li {
 	<li><a href="https://www.discogs.com/master/321685-Various-Do-You-See">Mystery - Mystery One</a></li>
 </ul>
 
-<div>
-	<video width="800" height="200" style="background-color: black;" controls>
-        <source
-          src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/Defocus.mp3"
-          type="audio/mp3"
-        />
-        <track
-          src="/deadlabels/media/defocus_playlist.vtt"
-          label="English subtitle"
-          kind="subtitles"
-          srclang="en-us"
-          default
-        />
-    </video>
-</div>
 </body>
 </html>
