--- a/deadlabels/frogman.html
+++ b/deadlabels/frogman.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
 <link rel="stylesheet" type="text/css" href="/css/dl.css">
+<meta charset="UTF-8">
+<meta name="description" content="All sounds taken from Frogman Records, Tokyo, 1994-2005"/>
+<meta property="og:title" content="Dead Labels - Frogman Records"/>
+<meta property="og:image" content="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/front_squares/FrontF.jpg"/>
+<meta property="og:image:type" content="image/jpeg"/>
 <style>
 body {
 	background-color: black;
@@ -28,9 +34,25 @@ li {
 	padding: 12px;
 }
 </style>
+</head>
 <body>
 <div class=header>
 	<a href="/deadlabels"><<</a>
+</div>
+<div>
+	<video width="800" height="200" style="background-color: black;" controls crossorigin="anonymous">
+        <source
+          src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/Frogman.mp3"
+          type="audio/mp3"
+        />
+        <track
+          src=https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/vtt/frogman_playlist.vtt
+          label="English subtitle"
+          kind="subtitles"
+          srclang="en-us"
+          default
+        />
+    </video>
 </div>
 <ul>
 	<li><a href="https://www.discogs.com/release/113703-Quadra-Sketch-From-A-Moment">Quadra - Spell of Rain</a></li>
@@ -48,20 +70,5 @@ li {
         <li><a href="https://www.discogs.com/release/142362-Hitoshi-Ohishi-Metronomerampage">Hitoshi Ohishi - Metronomerampage</a></li>
 </ul>
 
-<div>
-	<video width="800" height="200" style="background-color: black;" controls>
-        <source
-          src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/Frogman.mp3"
-          type="audio/mp3"
-        />
-        <track
-          src="/deadlabels/media/frogman_playlist.vtt"
-          label="English subtitle"
-          kind="subtitles"
-          srclang="en-us"
-          default
-        />
-    </video>
-</div>
 </body>
 </html>
