--- a/deadlabels/immune.html
+++ b/deadlabels/immune.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
 <link rel="stylesheet" type="text/css" href="/css/dl.css">
 <meta charset="UTF-8">
+<meta name="description" content="All sounds taken from Immune, Chicago, 2007-2017"/>
+<meta property="og:title" content="Dead Labels - Immune"/>
+<meta property="og:image" content="https://res.cloudinary.com/roedecker/image/upload/v1678103529/gelman/deadlabels/FrontI.png"/>
+<meta property="og:image:type" content="image/jpeg"/>
 <style>
 body {
 	background-color: black;
@@ -26,9 +31,25 @@ li {
 	padding: 12px;
 }
 </style>
+</head>
 <body>
 <div class=header>
 	<a href="/deadlabels"><<</a>
+</div>
+<div>
+	<video width="800" height="200" style="background-color: black;" controls crossorigin="anonymous">
+        <source
+          src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/Immune.mp3"
+          type="audio/mp3"
+        />
+        <track
+          src=https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/vtt/immune_playlist.vtt
+          label="English subtitle"
+          kind="subtitles"
+          srclang="en-us"
+          default
+        />
+    </video>
 </div>
 <ul>
 <li><a href="https://www.discogs.com/master/786874-Panabrite-Disintegrating-Landscape">Panabrite - Disintegrating Landscape</a></li>
@@ -47,20 +68,5 @@ li {
 <li><a href="https://www.discogs.com/master/1815382-Simon-Scott-Traba">Simon Scott - She Came From The Sea</a></li>
 </ul>
 
-<div>
-	<video width="800" height="200" style="background-color: black;" controls>
-        <source
-          src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/Immune.mp3"
-          type="audio/mp3"
-        />
-        <track
-          src="/deadlabels/media/immune_playlist.vtt"
-          label="English subtitle"
-          kind="subtitles"
-          srclang="en-us"
-          default
-        />
-    </video>
-</div>
 </body>
 </html>
