--- a/deadlabels.html
+++ b/deadlabels.html
@@ -24,9 +24,16 @@ body {
   font-family: Arial;
 }
 
-.header {
-  text-align: center;
-  padding: 32px;
+.header a {
+  padding: 20px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+}
+
+.header a:hover {
+  color: #f1f1f1;
 }
 
 .row {
@@ -74,7 +81,9 @@ body {
 <body>
 
 <!-- Header -->
-
+<div class="header">
+	<a href="/">/</a>
+</div>
 <!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
@@ -94,9 +103,6 @@ body {
     <a href="/deadlabels/defocus.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233507/gelman/deadlabels/FrontD.jpg" style="width:50%"></a>
     <a href="/deadlabels/hefty.html"><img src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/front_squares/FrontH.jpg" style="width:50%"></a>
   </div>
-</div>
-<div id="bottombar">
-	<a href="/index">home</span>
 </div>
 </body>
 </html>
