--- a/doors.html
+++ b/doors.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html>
 <style>
+.topnav {
+  padding:20px;
+  background-color:transparent;
+  overflow:hidden;
+}
+.topnav a {
+  padding: 20px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+}
+
+.topnav a:hover {
+  color: #f1f1f1;
+}
+
 body {
 	background-color: #32383f;
 	color: black;
@@ -29,10 +46,15 @@ body {
 	<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 </head>
 <body>
+<div class="topnav">
+	<a href="/index">/</a>
+</div>
+<div>
     <video width="40%" id="myVideo" autoplay loop=false>
     <source src="" id="mp4Source" type="video/mp4">
     Your browser does not support the video tag.
 </video>
+</div>
 <script type="text/javascript">
 var count=1;
 var player=document.getElementById('myVideo');
@@ -72,8 +94,8 @@ myVideo.loop=false;
 </script>
 <div>
 	<ul>
-		<li><button onclick="playpause();">play / pause</button></li>
-		<li style="font-size:20px;">loop <button onclick="myVideo.loop=true">on</button> <button onclick="myVideo.loop=false">off</button></li>
+		<li><button onclick="playpause();">play / pause</button> spacebar </li>
+		<li style="font-size:20px;">loop <button onclick="myVideo.loop=true">on</button> <button onclick="myVideo.loop=false">off</button> l key </li>
 		<li style="font-size:20px;">filters  <button onclick="vids = mlms01_vids; shuffle(vids); loadVideo();">mlms01</button><button onclick="vids = txfs01_vids.concat(mlms01_vids, tps01_vids); shuffle(vids); loadVideo();">tv</button><button onclick="vids = txfs01_vids; shuffle(vids); loadVideo();">txfs01</button><button onclick="vids = tps01_vids; shuffle(vids); loadVideo();">tps01</button></li>
 	</ul>
 </div>
