tps02 and tpfwwm

--- a/deadlabels.html
+++ b/deadlabels.html
@@ -94,6 +94,7 @@ body {
   <div class="column">
     <a href="/deadlabels/beaumonde.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233504/gelman/deadlabels/FrontB.jpg" style="width:50%"></a>
     <a href="/deadlabels/frogman.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233510/gelman/deadlabels/FrontF.jpg" style="width:50%"></a>
+    <a href="/deadlabels/japo.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1679337053/gelman/deadlabels/FrontJ.jpg" style="width:50%"></a>
   </div>  
   <div class="column">
     <a href="/deadlabels/clear.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233506/gelman/deadlabels/FrontC.jpg" style="width:50%"></a>
