--- a/doors.html
+++ b/doors.html
@@ -19,7 +19,7 @@
 }
 
 body {
-	background-color: #32383f;
+	background-color: black;
 	color: black;
 }
 #but {
@@ -38,6 +38,7 @@ body {
  }
  li {
 	padding: 15px;
+	color:#818181;
  }
 </style>
 <head>
@@ -96,7 +97,7 @@ myVideo.loop=false;
 	<ul>
 		<li><button onclick="playpause();">play / pause</button> spacebar </li>
 		<li style="font-size:20px;">loop <button onclick="myVideo.loop=true">on</button> <button onclick="myVideo.loop=false">off</button> l key </li>
-		<li style="font-size:20px;">filters  <button onclick="vids = mlms01_vids; shuffle(vids); loadVideo();">mlms01</button><button onclick="vids = txfs01_vids.concat(mlms01_vids, tps01_vids); shuffle(vids); loadVideo();">tv</button><button onclick="vids = txfs01_vids; shuffle(vids); loadVideo();">txfs01</button><button onclick="vids = tps01_vids; shuffle(vids); loadVideo();">tps01</button></li>
+		<li style="font-size:20px;">filters  <button onclick="vids = mlms01_vids; shuffle(vids); loadVideo();">mlms01</button><button onclick="vids = txfs01_vids.concat(mlms01_vids, tps01_vids); shuffle(vids); loadVideo();">tv</button><button onclick="vids = txfs01_vids; shuffle(vids); loadVideo();">txfs01</button><button onclick="vids = tps01_vids.concat(tps02_vids, tpfwwm_vids); shuffle(vids); loadVideo();">tp</button><button onclick="vids = tps01_vids; shuffle(vids); loadVideo();">tps01</button><button onclick="vids = tps02_vids; shuffle(vids); loadVideo();">tps02</button></li>
 	</ul>
 </div>
 </body>
