--- a/deadlabels.html
+++ b/deadlabels.html
@@ -90,6 +90,7 @@ body {
     <a href="/deadlabels/ambivalence.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233509/gelman/deadlabels/FrontA.jpg" style="width:50%"></a>
     <a href="/deadlabels/elfcut.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233508/gelman/deadlabels/FrontE.jpg" style="width:50%"></a>
     <a href="/deadlabels/immune.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1678103529/gelman/deadlabels/FrontI.png" style="width:50%"></a>
+    <a href="/deadlabels/merck.html"><img src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/front_squares/FrontM.jpg" style="width:50%"></a>
   </div>
   <div class="column">
     <a href="/deadlabels/beaumonde.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233504/gelman/deadlabels/FrontB.jpg" style="width:50%"></a>
@@ -99,10 +100,12 @@ body {
   <div class="column">
     <a href="/deadlabels/clear.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233506/gelman/deadlabels/FrontC.jpg" style="width:50%"></a>
     <a href="/deadlabels/gneiss.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233510/gelman/deadlabels/FrontG.jpg" style="width:50%"></a>
+    <a href="/deadlabels/k2o.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1681847756/gelman/deadlabels/grsiark8cbvgi2xer8zm.jpg" style="width:50%"></a>
   </div>
   <div class="column">
     <a href="/deadlabels/defocus.html"><img src="https://res.cloudinary.com/roedecker/image/upload/v1677233507/gelman/deadlabels/FrontD.jpg" style="width:50%"></a>
     <a href="/deadlabels/hefty.html"><img src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/front_squares/FrontH.jpg" style="width:50%"></a>
+    <a href="/deadlabels/ladomat2000.html"><img src="https://pub-de0f53c245634c89944c7a233bfb40cb.r2.dev/front_squares/FrontL.jpg" style="width:50%"></a>
   </div>
 </div>
 </body>
