--- a/doors.html
+++ b/doors.html
@@ -64,7 +64,7 @@ var count=1;
 var player=document.getElementById('myVideo');
 var mp4Vid = document.getElementById('mp4Source');
 player.addEventListener('ended',myHandler,false);
-
+var vids=doors_cinema 
 shuffle(vids);
 
 //function loadVideo()
@@ -97,13 +97,14 @@ loadVideo();
 myVideo.loop=false;
 </script>
 
-		<button id="hider" onclick="myFunction()">h i d e</button>
+		<button id="hider" onclick="myFunction()">hide</button>
 <div id="instructions">
 	<ul>
-		<li><button onclick="playpause();">play / pause</button> spacebar </li>
+		<li><button onclick="playpause();">play / pause</button> p key </li>
 		<li style="font-size:20px;">loop <button onclick="myVideo.loop=true">on</button> <button onclick="myVideo.loop=false">off</button> l key </li>
-		<li style="font-size:20px;">filters  <button onclick="vids = doors_cinema.concat(doors_tpfwwm); shuffle(vids); loadVideo();">cinema</button><button onclick="vids = doors_mlms01.concat(doors_mlms02); shuffle(vids); loadVideo()">mlm</button><button onclick="vids = doors_tps01.concat(doors_tps02, doors_tpfwwm, doors_tps03); shuffle(vids); loadVideo();">tp</button><button onclick="vids = doors_txfs01.concat(doors_txfs02, doors_mlms01, doors_tps01, doors_tps02, doors_tps03); shuffle(vids); loadVideo();">tv</button><button onclick="vids = doors_txfs01.concat(doors_txfs02); shuffle(vids); loadVideo();">txf</button></li>
+		<li style="font-size:20px;">filters  <button onclick="vids = doors_cinema.concat(doors_txfs01, doors_txfs02, doors_txfs03, doors_txfs04, doors_txfs05, doors_txfftf, doors_mlms01, doors_mlms02, doors_tps01, doors_tps02, doors_tpfwwm, doors_tps03); shuffle(vids); loadVideo();">all</button><button onclick="vids = doors_cinema.concat(doors_tpfwwm, doors_txfftf); shuffle(vids); loadVideo();">cinema</button><button onclick="vids = doors_txfs01.concat(doors_txfs02, doors_txfs03, doors_txfs04, doors_txfs05, doors_txfs06, doors_txfs07, doors_txfs08, doors_txfs11, doors_mlms01, doors_mlms02, doors_tps01, doors_tps02, doors_tps03); shuffle(vids); loadVideo();">tv</button><button onclick="vids = doors_txfs01.concat(doors_txfs02, doors_txfs03, doors_txfs04, doors_txfs05, doors_txfftf, doors_txfs06, doors_txfs07, doors_txfs08, doors_txfs11); shuffle(vids); loadVideo();">txf</button></li>
 	</ul>
+	<!-- vids = doors_cinema.filter(element => element.includes('wax');--!>
 </div>
 <script>
 function myFunction() {
